lib/src/compiler/tests/testdata/errors/102.out
error[E012]: invalid integer
 --> line:3:16
  |
3 |     $a = { 11 [-1-65535] 22 }
  |                ^^ this number is out of the valid range: [0, 65535]
  |